Added technical UI

--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -327,7 +327,7 @@ for (let i = 0; i < accordion.length; i++) {
         <div class="row">
           <div class="col-md-3 col-sm-6 col-12">
             <div class="info-box">
-              <span class="info-box-icon bg-info"><i class="fa fa-question-circle"></i></span>
+              <span class="info-box-icon bg-info"><i class="fa fa-question-circle" style="color:#fff"></i></span>
 
               <div class="info-box-content">
                 <span class="info-box-text">Total Questions</span>
@@ -340,10 +340,10 @@ for (let i = 0; i < accordion.length; i++) {
           <!-- /.col -->
           <div class="col-md-3 col-sm-6 col-12">
             <div class="info-box">
-              <span class="info-box-icon bg-success"><i class="fa fa-text-height"></i></span>
+              <span class="info-box-icon bg-success"><i class="fa fa-text-height" style="color:#fff"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Technical Questions</span>
+                <span class="info-box-text">Total Technical Questions</span>
                 <span class="info-box-number">15</span>
               </div>
               <!-- /.info-box-content -->
@@ -353,10 +353,10 @@ for (let i = 0; i < accordion.length; i++) {
           <!-- /.col -->
           <div class="col-md-3 col-sm-6 col-12">
             <div class="info-box">
-              <span class="info-box-icon bg-warning"><i class="fa fa-comments-o"></i></span>
+              <span class="info-box-icon bg-warning"><i class="fa fa-comments-o" style="color:#fff"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Technical Discussion</span>
+                <span class="info-box-text">Technical Discussion (In Min)</span>
                 <span class="info-box-number">3 : 20</span>
               </div>
               <!-- /.info-box-content -->
@@ -366,10 +366,10 @@ for (let i = 0; i < accordion.length; i++) {
           <!-- /.col -->
           <div class="col-md-3 col-sm-6 col-12">
             <div class="info-box">
-              <span class="info-box-icon bg-danger"><i class="fa fa-eercast"></i></span>
+              <span class="info-box-icon bg-danger"><i class="fa fa-eercast" style="color:#fff"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">OverAl Discussion</span>
+                <span class="info-box-text">OverAll Discussion (In Min)</span>
                 <span class="info-box-number">5 : 30</span>
               </div>
               <!-- /.info-box-content -->
