--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -300,7 +300,7 @@ for (let i = 0; i < accordion.length; i++) {
               <span class="info-box-icon bg-warning"><i class="fa fa-commenting" style="color:#fff"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Technical Discussion (In Min)</span>
+                <span class="info-box-text">Technical Discussion (Interviewer)</span>
                 <span class="info-box-number">{{ interviewer_total_tech_time }}</span>
               </div>
               <!-- /.info-box-content -->
