--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1701,3 +1701,10 @@ h3.quote::before {
   font-size: 12px;
   border-radius: 10px;
 }
+
+
+.mainList{
+  display: flex; 
+  align-items: center; 
+  justify-content: space-between;
+}
