resolving issues identified by testing team

--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -125,6 +125,58 @@
           class="btn btn-theme-white btn-sm {{classname}}"
           >Analyze Video</a
         >
+        <a
+          href="#"
+          class="btn btn-theme-white btn-sm"
+          data-toggle="modal"
+          data-target="#deleteModal{{candidate.id}}"
+        >
+          Delete</a
+        >
+        <!-- The Modal -->
+        <div
+          class="modal fade"
+          id="deleteModal{{candidate.id}}"
+          tabindex="-1"
+          role="dialog"
+          aria-labelledby="deleteModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">
+                  Confirm Delete
+                </h5>
+                <button
+                  type="button"
+                  class="close"
+                  data-dismiss="modal"
+                  aria-label="Close"
+                >
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                Are you sure you want to delete this item?
+              </div>
+              <div class="modal-footer">
+                <button
+                  type="button"
+                  class="btn btn-secondary"
+                  data-dismiss="modal"
+                >
+                  Cancel
+                </button>
+                <a
+                  href="{{ url_for('delete_route', item_id=candidate.id) }}"
+                  class="btn btn-danger"
+                  >Delete</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
         {% endif %} {% if candidate.video_analysis_status == "inprogress" %}
         Analyzing Please wait... for 15 -30 minutes {% endif %}
         
