transcript detail page and settings

--- a/templates/admin/interview_analyzer/index.html
+++ b/templates/admin/interview_analyzer/index.html
@@ -23,15 +23,15 @@ Interview Assessment {% endblock %} {% block page_body_title %}  {% endblock %} 
           <!-- Button with file input and icon -->
             <div>
             <a href="{{ url_for('interview_analyzer.interview_transcript_upload_file') }}"><button class="file-upload-button css-1ikvom0"><i class="fas fa-upload"></i> Import Google Meet Transcript</button></a>
-            <a href="{{ url_for('interview_analyzer.interview_video_upload_file') }}"><button class="file-upload-button css-1ikvom0"><i class="fas fa-upload"></i> Import from file</button></a>
+            <a href="{{ url_for('interview_analyzer.interview_video_upload_file') }}"><button class="file-upload-button css-1ikvom0"><i class="fas fa-upload"></i> Import Video from file</button></a>
             </div>
           </div>
         <div class="mainList">
-        <h5 style="color: #000;margin-top: 30px;">Interviews</h5>
+        <h5 style="color: #000;margin-top: 30px;">Video Interviews</h5>
         <div class="table_div"></div>
         </div>
         <div>
-        <h5 style="color: #000;margin-top: 30px;">Transcripts</h5>
+        <h5 style="color: #000;margin-top: 30px;">Meet Transcripts</h5>
         <div class="table_div_transcript"></div>
       </div>
       </div>
