--- a/static/admin/assets/css/demo.css
+++ b/static/admin/assets/css/demo.css
@@ -272,3 +272,64 @@ footer.navigation {
   margin: -81px -40px 0 0;
   transform: none;
 }
+
+
+
+#confirmation_modal_transcript .modal-dialog {
+  max-width: 33%;
+  padding: 20px;
+}
+
+#confirmation_modal_transcript .modal-body {
+  padding-top: 0;
+}
+
+#confirmation_modal_transcript .modal-dialog .img_wrapper {
+  display: block;
+  overflow: hidden;
+}
+
+#confirmation_modal_transcript .modal-dialog .img_wrapper img {
+  object-fit: contain;
+  float: left;
+  width: 100%;
+}
+
+#confirmation_modal_transcript {
+  float: left;
+  margin: 10% 0;
+  text-align: center;
+  width: 100%;
+}
+
+#confirmation_modal_transcript .button_wrapper {
+  float: left;
+  width: 100%;
+  margin: 30px 0 45px 0;
+}
+
+#confirmation_modal_transcript .attendee-btn {
+  padding: 10px;
+  border-radius: 10px;
+  font-size: 15px;
+  margin: 2px;
+}
+
+#confirmation_modal_transcript .btn-failed {
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+#confirmation_modal_transcript .btn-close:hover,
+#confirmation_modal_transcript .btn-close:focus,
+#confirmation_modal_transcript .btn-close:active {
+  opacity: 1;
+  outline: none;
+  transform: none;
+}
+
+#confirmation_modal_transcript .modal-header .btn-close {
+  margin-top: -1.25rem;
+  margin: -81px -40px 0 0;
+  transform: none;
+}
