--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,21 @@
 {% extends 'layouts/base.html' %} {% block page_title %} AI Tool {%
 endblock %} {% block body_block %}
+<!-- jQuery -->
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<!-- DataTables CSS -->
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css"
+/>
+
+<!-- DataTables JS -->
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"></script>
 
 <!-- contact form start -->
 <section class="contact-form-wrap section">
@@ -10,110 +26,75 @@ endblock %} {% block body_block %}
         <div class="divider"></div>
       </div>
     </div>
-    <div class="row p-5">
-      <div class="table-class">
-        <div class="table">
-          <div class="table-row table-header">
-            <div class="column">Project Name</div>
-            <div class="column">Project Description</div>
-            <div class="column">Created By</div>
-            <div class="column">Action</div>
-          </div>
-          {% for application in application_list %}
-          <div class="table-row">
-            <div class="column left">{{ application.project_name }}</div>
-            <div class="column left">
-              {% if application.project_description|length > 50 %}
-              <p
-                data-toggle="tooltip"
-                data-html="true"
-                title="{{application.project_description}}"
-              >
-                {{ application.project_description[:50] }} [...]
-              </p>
-              {% else %} {{ application.project_description }} {% endif %}
-            </div>
-            <div class="column">
-              {{ application.created_by|replace('&','<br />')|safe }}
-            </div>
-            <div class="column actions_column">
-              <div class="inner_action_div">
-                <a href="{{ url_for(application.route) }}" target="_blank">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="1em"
-                    viewBox="0 0 576 512"
-                  >
-                    <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <path
-                      d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z"
-                    />
-                  </svg>
-                </a>
-                <span>View Project</span>
-                <div class="arrow"></div>
-              </div>
+    <div class="row p-5" style="display: inherit;">
+      <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+ <thead style=" background-color: #373742;
+  color: #fff;">
+    <tr>
+      <th class="th-sm text-center">Project Name</th>
+      <th class="th-sm text-center">Project Description</th>
+      <th class="th-sm text-center">Created By</th>
+      <th class="th-sm text-center">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for application in application_list %}
+    <tr>
+      <td>{{ application.project_name }}</td>
+      <td>
+        {% if application.project_description|length > 50 %}
+        <p
+          data-toggle="tooltip"
+          data-html="true"
+          title="{{application.project_description}}"
+        >
+          {{ application.project_description[:50] }} [...]
+        </p>
+        {% else %} {{ application.project_description }} {% endif %}
+      </td>
+      <td>{{ application.created_by|replace('&','<br />')|safe }}</td>
+      <td>
+  <div class="row">
+    <div class="col">
+      <a href="{{ url_for(application.route) }}" target="_blank">
+        <i class="fa fa-eye" aria-hidden="true" title="View Project"></i>
+      </a>
+    </div>
+    {% if application.project_demo_ppt != '#' %}
+    <div class="col">
+      <a href="{{ application.project_demo_ppt }}" target="_blank">
+        <i class="fa fa-file-powerpoint-o" aria-hidden="true" title="View Presentation"></i>
+      </a>
+    </div>
+    {% endif %}
+    {% if application.project_demo_video != '#' %}
+    <div class="col">
+      <a href="{{ application.project_demo_video }}" target="_blank">
+        <i class="fa fa-video-camera" aria-hidden="true" title="View Video"></i>
+      </a>
+    </div>
+    {% endif %}
+    <div class="col">
+      <a href="{{ application.project_model_code_link }}" target="_blank">
+        <i class="fa fa-github" aria-hidden="true" title="View Code"></i>
+      </a>
+    </div>
+  </div>
+</td>
 
-              <div class="inner_action_div">
-                <a href="{{ application.project_demo_ppt }}" target="_blank">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="1em"
-                    viewBox="0 0 384 512"
-                  >
-                    <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <path
-                      d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM136 240h68c42 0 76 34 76 76s-34 76-76 76H160v32c0 13.3-10.7 24-24 24s-24-10.7-24-24V368 264c0-13.3 10.7-24 24-24zm68 104c15.5 0 28-12.5 28-28s-12.5-28-28-28H160v56h44z"
-                    />
-                  </svg>
-                </a>
-                <span>View Presentation</span>
-                <div class="arrow"></div>
-              </div>
+    </tr>
+    {% endfor %}
+  </tbody>
+  <tfoot>
+    <tr>
+      <th>Project Name</th>
+      <th>Project Description</th>
+      <th>Created By</th>
+      <th>Action</th>
+    </tr>
+  </tfoot>
+</table>
 
-              {% if application.project_demo_video != '#' %}
-
-              <div class="inner_action_div">
-                <a href="{{ application.project_demo_video }}" target="_blank">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="1em"
-                    viewBox="0 0 576 512"
-                  >
-                    <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <path
-                      d="M0 128C0 92.7 28.7 64 64 64H320c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128zM559.1 99.8c10.4 5.6 16.9 16.4 16.9 28.2V384c0 11.8-6.5 22.6-16.9 28.2s-23 5-32.9-1.6l-96-64L416 337.1V320 192 174.9l14.2-9.5 96-64c9.8-6.5 22.4-7.2 32.9-1.6z"
-                    />
-                  </svg>
-                </a>
-                <span>View Video</span>
-                <div class="arrow"></div>
-              </div>
-              {% endif %}
-              <div class="inner_action_div">
-                <a
-                  href="{{ application.project_model_code_link }}"
-                  target="_blank"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    height="1em"
-                    viewBox="0 0 496 512"
-                  >
-                    <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                    <path
-                      d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
-                    />
-                  </svg>
-                </a>
-                <span>View Code</span>
-                <div class="arrow"></div>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-      </div>
     </div>
   </div>
 </section>
@@ -124,125 +105,11 @@ endblock %} {% block body_block %}
   integrity="sha384-QYIZto+st3yW+o8+5OHfT6S482Zsvz2WfOzpFSXMF9zqeLcFV0/wlZpMtyFcZALm"
   crossorigin="anonymous"
 />
-<style>
-  .table-class {
-    width: 100%;
-  }
+<script>
+  $(document).ready(function () {
+  $('#dtBasicExample').DataTable();
+  $('.dataTables_length').addClass('bs-select');
+});
+</script>
 
-  .table-class .table {
-    display: block;
-    width: 100%;
-  }
-
-  .table-class .table .table-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-width: 500px;
-    width: 100%;
-    flex-wrap: wrap;
-    background: #fff;
-  }
-
-  .table-class .table .table-row .column {
-    width: 25%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    border: 1px solid #dddddd;
-    align-self: stretch;
-  }
-
-  .table-class .table .table-row.table-header {
-    background-color: #373450;
-  }
-
-  .table-class .table .table-row.table-header .column {
-    color: #fff;
-    border: 1px solid #fff;
-  }
-
-  .column.left {
-    text-align: left !important;
-    justify-content: flex-start !important;
-  }
-
-  .column.center {
-    text-align: center !important;
-    justify-content: center !important;
-  }
-
-  .column.right {
-    text-align: right !important;
-    justify-content: flex-end !important;
-  }
-
-  .column.actions_column a {
-    font-size: 25px;
-    border-radius: 50%;
-  }
-
-  .column.actions_column {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-
-  .column.actions_column .inner_action_div {
-    position: relative;
-  }
-
-  .column.actions_column .inner_action_div span {
-    position: absolute;
-    min-width: 200px;
-    padding: 9px 30px;
-    width: auto !important;
-    width: 100%;
-    top: 47px;
-    left: -86px;
-    background: #373450;
-    color: #ffffff;
-    display: none;
-    -webkit-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.24);
-    -moz-box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.24);
-    box-shadow: 1px 3px 5px 1px rgba(0, 0, 0, 0.24);
-    text-align: center !important;
-    z-index: 999 !important;
-  }
-
-  .column.actions_column .inner_action_div div.arrow {
-    width: 35px;
-    height: 35px;
-    background: #373450;
-    transform: rotate(45deg);
-    position: absolute;
-    top: 45px;
-    left: 0px;
-    padding: 10px;
-    display: none;
-  }
-
-  .column.actions_column .inner_action_div:hover .arrow,
-  .column.actions_column .inner_action_div:hover span {
-    display: block;
-  }
-
-  @media (max-width: 767px) {
-    .table-class {
-      overflow: auto;
-    }
-    .table-row .column:nth-child(2),
-    .table-row .column:nth-child(3) {
-      display: none !important;
-    }
-
-    .table-row .column:nth-child(1),
-    .table-row .column:nth-child(4) {
-      width: 50% !important;
-    }
-  }
-</style>
 {% endblock %}
