--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -1,10 +1,11 @@
+<!-- Your custom script -->
 <link
   rel="stylesheet"
   href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
 />
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-<table class="table table-responsive table-bordered" id="candidate_list">
+<table class="table table-striped table-bordered table-sm" cellspacing="0" width="100%" id="candidate_list" style="padding-top:2%">
   <thead>
     <th>Name</th>
     <th>Added By</th>
@@ -358,4 +359,10 @@
         },
       });
   }
+</script>
+<script>
+  $(document).ready(function () {
+  $('#candidate_list').DataTable();
+  $('.dataTables_length').addClass('bs-select');
+});
 </script>
