--- a/templates/admin/interview_analyzer/index.html
+++ b/templates/admin/interview_analyzer/index.html
@@ -1,5 +1,16 @@
 {% extends 'layouts/admin/dashboard/base.html' %} {% block page_title %} Smart
 Interview Assessment {% endblock %} {% block page_body_title %}  {% endblock %} {% block body_block %}
+
+<!-- DataTables CSS -->
+<link
+  rel="stylesheet"
+  type="text/css"
+  href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css"
+/>
+
+
+<!-- DataTables JS -->
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js" defer></script>
 <style>
 .css-1ikvom0{
     font-size: 13px;
@@ -12,7 +23,7 @@ Interview Assessment {% endblock %} {% block page_body_title %}  {% endblock %} 
     background-color: #fff;
     }
 </style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 <div class="row">
   <div class="card mt-4">
     <div class="card-body">
