master table issie for admin, bug fixes v1

--- a/templates/admin/interview_analyzer/candidate_list.html
+++ b/templates/admin/interview_analyzer/candidate_list.html
@@ -211,7 +211,7 @@
         target="_blank"
         href="/{{ master_entry.transcript.transcript  }}"
         class="btn btn-theme-white btn-sm"
-        >View Transcipt</a
+        >View Transcript</a
         >
         {% if master_entry.transcript.transcript_analysis_status == "completed" %}
         <a
@@ -358,7 +358,7 @@
         <div class="attendees_content"></div>
         <div class="confirmation-success d-none">
           <h2>Thank you for the confirmation.</h2>
-          <p>We are now analyzing the video, The process will take a while, so why not take a break and enjoy a cup of coffee?</p>
+          <p>We are now analyzing the transcript, The process will take a while, so why not take a break and enjoy a cup of coffee?</p>
           <div class="loader_wrapper_modal">
             <div class="loader">
               <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
