--- a/templates/admin/interview_analyzer/view_report.html
+++ b/templates/admin/interview_analyzer/view_report.html
@@ -300,8 +300,8 @@ for (let i = 0; i < accordion.length; i++) {
               <span class="info-box-icon bg-warning"><i class="fa fa-commenting" style="color:#fff"></i></span>
 
               <div class="info-box-content">
-                <span class="info-box-text">Technical Discussion (Interviewer)</span>
-                <span class="info-box-number">{{ interviewer_total_tech_time }}</span>
+                <span class="info-box-text">Technical Discussion (In Min) </span>
+                <span class="info-box-number">Interviewer : {{ interviewer_total_tech_time }} </span>
               </div>
               <!-- /.info-box-content -->
             </div>
@@ -731,23 +731,22 @@ for (let i = 0; i < accordion.length; i++) {
             <li>Weight Sad = 1, </li>
             <li>Weight Disgust = 1 </li>
           </ul>
-          <p>We used the following to calculate weighted sum</p>
+          <p>We used the following formula to calculate the weighted sum </p>
           <p style="font-weight: bolder;
-    font-style: italic;
     border-style: inset;
-    padding: 1%;">Weighted Sum = (neutral * weight_neutral) + (happy * weight_happy) + (surprise * weight_surprise) </br>
-            Other Emotions Sum = (angry * weight_angry) + (disgust * weight_disgust) + (fear * weight_fear) + (sad * weight_sad)</br>
-    nervousness_score = other_emotions_sum</br>
-    confidence_score = weighted_sum</br>
-    total_score = confidence_score + nervousness_score</p>
+    padding: 1%;">Weighted Sum = (Neutral * Weight Neutral) + (Happy * Weight Happy) + (Surprise * Weight Surprise) </br></br>
+            Other Emotions Sum = (Angry * Weight Angry) + (Disgust * Weight Disgust) + (Fear * Weight Fear) + (Sad * Weight Sad)</br></br>
+            Confidence Score = Weighted Sum</br></br>
+            Nervousness Score = Other Emotions Sum </br></br>
+    
+    Total Score = Confidence Score + Nervousness Score</p>
 
            <p style="font-weight: bolder;
-    font-style: italic;
     border-style: inset;
-    padding: 1%;"> CL = (confidence_score / total_score) * 100</p>
+    padding: 1%;"> Confidence Level  = (Confidence Score / Total Score) * 100</p>
           <p>
             The Confidence Level represents the cumulative emotional intensity of the selected emotions. It is equal to
-            the weighted sum of the selected emotions' percentages.
+            the weighted sum of the selected emotion's percentages.
           </p>
         </div>
 
