--- a/templates/basic.html
+++ b/templates/basic.html
@@ -8,7 +8,7 @@
   
   <meta name="author" content="infobeans.com">
 
-  <title>INVESTORS CHATBOT| Infobeans Technologies</title>
+  <title>INVESTORS CHATBOT| InfoBeans Technologies</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
