--- a/templates/layouts/admin/dashboard/footer.html
+++ b/templates/layouts/admin/dashboard/footer.html
@@ -6,7 +6,7 @@
       <p class="p-0 m-0 text-center">
         © Copyright 2023
         <a class="text-danger" href="http://infobeans.com/"
-          >Infobeans Technologies</a
+          >InfoBeans Technologies</a
         >. All Rights Reserved
       </p>
     </div>
