--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="megakit,business,company,agency,multipurpose,modern,bootstrap4">
   <meta name="author" content="infobeans.com">
-  <title> {% block page_title %}INVESTORS CHATBOT{% endblock %} | Infobeans Technologies</title>
+  <title> {% block page_title %}INVESTORS CHATBOT{% endblock %} | InfoBeans Technologies</title>
   {# Include Theme Styles #}
   {% include 'layouts/styles.html' %}
   {# Include Theme Styles #}
