--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-expand-lg" id="navbar">
 		<div class="container-fluid justify-content-center">
             <!-- Investors<span> Chatbot</span> -->
-            <p class="p-0 m-0 text-center">© Copyright <a class="text-danger" href="http://infobeans.com/">Infobeans Technologies</a>. All Rights Reserved</p>
+            <p class="p-0 m-0 text-center">© Copyright <a class="text-danger" href="http://infobeans.com/">InfoBeans Technologies</a>. All Rights Reserved</p>
 		</div>
 	</nav>
 </header>
