--- a/templates/admin/interview_analyzer/index.html
+++ b/templates/admin/interview_analyzer/index.html
@@ -23,7 +23,7 @@ Interview Assessment {% endblock %} {% block page_body_title %}  {% endblock %} 
     background-color: #fff;
     }
 </style>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <div class="row">
   <div class="card mt-4">
     <div class="card-body">
